--- a/fiddles/testjqui/index.html
+++ b/fiddles/testjqui/index.html
@@ -3,16 +3,12 @@
     <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <script src="../../jslib/jquery-1.7.min.js"></script>
-    <!-- Remove comment markers to use jquery UI
     <script src="../../jslib/jquery-ui-1.8.16.custom.min.js"></script>
     <link rel="stylesheet" type="text/css" href="../../csslib/smoothness/jquery-ui-1.8.16.custom.css"> 
-    -->
     <script src="code.js" type="text/javascript" charset="UTF-8"></script>
     </head>
 
 <body>
-<!--
-Put your markup here
--->
+    JQuery UI Autocomplete: <input>
 </body>
 </html>
